# web

./: build.gradle
apk/: addiv.txt  adlist.txt  (+3 more)
app/: CMakeLists.txt  build.gradle
app/release/: app-release.apk  output.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: index.html  vipvideo.json
app/src/main/assets/ad/: addiv.txt  adlist.txt
app/src/main/assets/data/: addiv.txt  adlist.txt  data.txt
app/src/main/cpp/: native-lib.cpp
app/src/main/java/cn/liuyin/ndk/: MyNdkTool.java
app/src/main/java/cn/liuyin/tool/: CrashHandler.java  DataCleanManager.java  DensityUtil.java  FileTool.java  FileUtils.java  HttpTool.java  LogTool.java  MBase64.java  NetStateUtils.java  NetworkUtil.java  NotificationTool.java  PackageTool.java  QQUrlScheme.java  ScreenUtil.java  ShortCutUtils.java  StateBarTool.java
app/src/main/java/cn/liuyin/web/: APPApplication.java
app/src/main/java/cn/liuyin/web/activity/: MainActivity.java  TEST.java  WebViewFragment.java
app/src/main/java/cn/liuyin/web/constant/: ConstantData.java
app/src/main/java/cn/liuyin/webview/: ADFilterTool.java  ComendBean.java  DownloadCompleteReceiver.java  LongPressListenerWrapper.java  MDownloadListener.java  MWebChromeClient.java  MWebPicture.java  MWebSetting.java  MWebView.java  MWebViewClient.java  NetChangeReceiver.java  TTSService.java  VipVideo.java  WebFunction.java  WebJsInterface.java  WebviewUA.java  X5WebViewEventHandler.java
app/src/main/res/anim/: dialog_enter.xml  dialog_exit.xml
app/src/main/res/drawable/: ic_baidu.xml  ic_google.xml  ic_history.xml  ic_video.xml
app/src/main/res/layout/: fargment_webview.xml  main.xml  top_bar.xml
app/src/main/res/layout-v1/: opeanapp.xml  souce.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: adBlockUrl.xml  colors.xml  dimens.xml  strings.xml  styles.xml
(+21 files in other folders)
